--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -15,13 +17,40 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="imageContainer">
+      <!-- logo -->
+      <img src="./images/logo.svg" alt="huddle-logo">
+      <!-- hero image -->
+      <div class="heroImage">
+        <img src="./images/illustration-mockups.svg" alt="illustration-mockups" id="illustrationMockups">
+      </div>
+    </div>
 
-  Build The Community Your Fans Will Love
+    <div class="infoContainer">
+        <!-- h1 -->
+        <h1>Build The Community Your Fans Will Love</h1>
+        <!-- p -->
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. 
+        </p>
+    </div>
+    
+    <!-- button -->
+     <button>Register</button>
+    <!-- social media icons -->
+    <div class="socialMediaIcons">
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+      <a href="#">Instagram</a>
+    </div>
+  </main>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  
 
-  Register
+  
+
+  
 
   <footer>
     <p class="attribution">
