--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <div class="imageContainer">
       <!-- logo -->
-      <img src="./images/logo.svg" alt="huddle-logo">
+      <img src="./images/logo.svg" alt="huddle-logo" id="huddleLogo">
       <!-- hero image -->
       <div class="heroImage">
         <img src="./images/illustration-mockups.svg" alt="illustration-mockups" id="illustrationMockups">
@@ -34,16 +34,17 @@
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion. 
         </p>
+        <!-- button -->
+        <button>Register</button>
+        <!-- social media icons -->
+        <div class="socialMediaIcons">
+            <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+        </div>
     </div>
     
-    <!-- button -->
-     <button>Register</button>
-    <!-- social media icons -->
-    <div class="socialMediaIcons">
-      <a href="#">Facebook</a>
-      <a href="#">Twitter</a>
-      <a href="#">Instagram</a>
-    </div>
+    
   </main>
 
   
