--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button>Register</button>
         <!-- social media icons -->
         <div class="socialMediaIcons">
-            <a href="#">Facebook</a>
+            <a href="#"></a>
           <a href="#">Twitter</a>
           <a href="#">Instagram</a>
         </div>
