--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <!-- button -->
         <button>Register</button>
         <!-- social media icons -->
-        <div class="socialMediaIcons">
-            <a href="#"></a>
-          <a href="#">Twitter</a>
-          <a href="#">Instagram</a>
-        </div>
+        <ul class="socialMediaIcons">
+          <li><i class="fa-brands fa-facebook-f"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
     </div>
     
     
@@ -59,5 +59,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="https://kit.fontawesome.com/1e81cf774a.js" crossorigin="anonymous"></script>
 </body>
 </html>
